# proxum

./: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml  init.sql
.sqlx/: query-e3c291f944e0925f216b538db7e349a9771178b09d07fca0991cab4ed4b72241.json
proto/: user.proto
src/: handlers.rs  main.rs  persitence.rs  protobuf.rs  user.rs  validate.rs
